# napari-omero

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  deploy.yml
napari_omero/: __init__.py  __main__.py  plugin.py
napari_omero/widgets/: gateway.py  login.py  main.py  thumb_grid.py  tree_model.py
src/: omero_napari.py
src/napari_omero/: __init__.py  __main__.py  napari.yaml  utils.py
src/napari_omero/plugins/: _napari.py  loaders.py  masks.py  omero.py
src/napari_omero/widgets/: ROIs.py  __init__.py  gateway.py  login.py  main.py  thumb_grid.py  tree_model.py
src/omero/plugins/: napari.py
src/omero_napari/: __init__.py  utils.py
src/omero_napari/plugins/: loaders.py  napari.py  omero.py
src/omero_napari/widgets/: __init__.py  main.py
tests/: docker-compose.yml  test_utils.py  test_widget.py
tests/local/: test_utils.py  test_widget.py
tests/server/: conftest.py  test.py  test_server.py
