[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/napari_omero/_version.py"

[tool.black]
target-version = ['py37', 'py38']
skip-string-normalization = true
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "once::Warning",
    "ignore:distutils Version classes are deprecated:",
    "ignore:the imp module is deprecated in:",
    "ignore:'U' mode is deprecated",
    "ignore:Please import PackageMetadata from 'npe2'"
]
