[metadata]
author = The Open Microscopy and napari teams
author_email = talley.lambert@gmail.com
description = napari/OMERO interoperability
keywords = OMERO.CLI plugin napari napari-plugin
license = BSD 3-Clause
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = napari-omero
platform = any
url = https://github.com/tlambert03/napari-omero
project_urls = 
    Bug Tracker = https://github.com/tlambert03/napari-omero/issues
    Source Code = https://github.com/tlambert03/napari-omero
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Framework :: napari
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
python_requires = >=3.7,<=3.9
install_requires =
    napari[all]>=0.4.3
    omero-py
    omero-rois


[options.entry_points]
console_scripts =
    napari-omero = napari_omero.__main__:main
napari.plugin =
    OMERO = napari_omero.plugins._napari

[options.extras_require]
dev = 
    pytest
    pytest-cov
    pytest-qt
    pre-commit>=1.16.1
    black==19.10b0
    flake8==3.8.3
    mypy==0.782
    pre-commit

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# W503	Line break occurred before a binary operator
ignore = E203,W503
max-line-length = 79
max-complexity = 18
