[metadata]
name = napari_omero
description = napari/OMERO interoperability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-omero
author = The Open Microscopy and napari teams
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Framework :: napari
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = OMERO.CLI plugin napari napari-plugin
platform = any
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-omero/issues
    Source Code = https://github.com/tlambert03/napari-omero

[options]
install_requires =
    napari>=0.4.13
    omero-py
    omero-rois
python_requires = >=3.7,<=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    napari-omero = napari_omero.__main__:main
napari.manifest =
    napari-omero = napari_omero:napari.yaml

[options.extras_require]
all =
    napari[all]
dev =
    black==19.10b0
    flake8==3.8.3
    mypy==0.782
    pre-commit
    pre-commit>=1.16.1
    pytest
    pytest-cov
    pytest-qt

[options.package_data]
napari_omero = napari.yaml

[flake8]
ignore = E203,W503
max-line-length = 79
max-complexity = 18
