[metadata]
name = napari_omero
description = napari/OMERO interoperability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-omero
author = The Open Microscopy and napari teams
author_email = talley.lambert@gmail.com
license = GPL-2.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Framework :: napari
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = OMERO.CLI plugin napari napari-plugin
platform = any
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-omero/issues
    Source Code = https://github.com/tlambert03/napari-omero

[options]
packages =
    omero.plugins
    napari_omero
install_requires =
    napari>=0.4.13
    omero-py
    omero-rois
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.entry_points]
console_scripts =
    napari-omero = napari_omero.__main__:main
napari.manifest =
    napari-omero = napari_omero:napari.yaml

[options.extras_require]
all =
    napari[all]
dev =
    black
    flake8
    mypy
    pre-commit
tests =
    pytest
    pytest-cov
    pytest-qt
    pytest-xvfb;sys_platform == 'linux'
    pywin32;sys_platform == 'win32'

[options.package_data]
napari_omero = napari.yaml

[flake8]
ignore = E203,W503
max-line-length = 79
max-complexity = 18
